# filtarr

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_STRATEGY_RESEARCH.md  SECURITY_REVIEW.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: python-quality.instructions.md  python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  pr-preview.yml  publish-pypi.yml  release-please.yml  release.yml
docs/: VERSIONING.md  troubleshooting-502-errors.md
docs/plans/: 2025-12-28-clean-log-output.md  2025-12-28-global-log-level-plan.md
docs/superpowers/plans/: 2026-05-15-pr-preview-docker-builds.md
docs/superpowers/specs/: 2026-05-15-pr-preview-docker-builds-design.md
scripts/: test-docker.sh
src/filtarr/: __init__.py  checker.py  cli.py  config.py  criteria.py  logging.py  output.py  state.py  tagger.py  webhook.py
src/filtarr/clients/: __init__.py  base.py  radarr.py  sonarr.py
src/filtarr/scheduler/: executor.py  exporter.py
src/findarr/: __init__.py  checker.py  cli.py  config.py  state.py  webhook.py
src/findarr/clients/: __init__.py  base.py  radarr.py  sonarr.py
src/findarr/models/: __init__.py  common.py  radarr.py  sonarr.py
src/findarr/scheduler/: __init__.py  executor.py  exporter.py  manager.py  models.py  triggers.py
tests/: __init__.py  conftest.py  test_base_client.py  test_checker.py  test_checker_extended.py  test_cli.py  test_cli_batch_extended.py  test_cli_logging.py  test_cli_schedule.py  test_cli_serve.py  test_clients.py  test_config.py  test_connection_pooling.py  test_executor_extended.py  test_integration.py  test_logging.py  test_models.py  test_output.py  test_scheduler.py  test_scheduler_manager.py  test_sonarr.py  test_sonarr_extended.py  test_state.py  test_state_extended.py  test_webhook.py
(+11 files in other folders)
